Update TOSCA types to correctly support the Cellar App

--- a/artifacts/mysql/mysql_configure.yml
+++ b/artifacts/mysql/mysql_configure.yml
@@ -2,3 +2,19 @@
   - name: update mysql root password for all root accounts
     mysql_user: name=root password={{root_password}}
     ignore_errors: yes
+
+  - name: Enable remote access
+    lineinfile: dest=/etc/mysql/my.cnf regexp='bind-address' line='bind-address=0.0.0.0'
+    when: ansible_os_family == "Debian"
+    
+  - name: Enable remote access
+    lineinfile: dest=/etc/my.cnf regexp='bind-address' line='bind-address=0.0.0.0'
+    when: ansible_os_family == "RedHat"
+    
+  - name: Start MySQL service
+    service: name=mysqld state=restarted
+    when: ansible_os_family == "RedHat"
+    
+  - name: Start MySQL service
+    service: name=mysql state=restarted
+    when: ansible_os_family == "Debian"
