Improve the documentation on the examples

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -197,7 +197,7 @@ tosca.capabilities.indigo.LRMS:
       type: string
       required: true
       constraints:
-      - valid_values: [ torque, slurm, sge ]
+      - valid_values: [ torque, slurm, sge, condor ]
 
  
 tosca.nodes.indigo.ElasticCluster.FrontEnd:
