--- a/examples/cellar_webapp_mem.yaml
+++ b/examples/cellar_webapp_mem.yaml
@@ -1,5 +1,10 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
-description: TOSCA test for the IM
+
+description: >
+  TOSCA test for launching the Wine Cellar Application (PHP Version)
+  (https://github.com/ccoenraets/wine-cellar-php) using the simple
+  in memory DB with a single web server node.
+
 topology_template:
 
   inputs:
