--- a/examples/cellar_webapp_mysql.yaml
+++ b/examples/cellar_webapp_mysql.yaml
@@ -1,6 +1,9 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
  
-description: TOSCA test for the IM
+description: >
+  TOSCA test for launching the Wine Cellar Application (PHP Version)
+  (https://github.com/ccoenraets/wine-cellar-php) as an example of
+  a two tier application with an Apache web server and a MySQL DB
 
 topology_template:
   inputs:
