--- a/examples/elastic_cluster.yml
+++ b/examples/elastic_cluster.yml
@@ -1,6 +1,9 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
  
-description: TOSCA CLUES test for the IM
+description: >
+  TOSCA test for launching a Virtual Elastic Cluster. It will launch
+  a single front-end that will be in change of managing the elasticity
+  using the specified LRMS (torque, sge, slurm and condor) workload.
 
 topology_template:
 
