--- a/examples/galaxy_tosca.yaml
+++ b/examples/galaxy_tosca.yaml
@@ -1,6 +1,8 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
  
-description: TOSCA Galaxy test for the IM
+description: >
+  TOSCA test for launching a Galaxy Server also configuring the bowtie2
+  tool using Galaxy Tool Shed.
 
 topology_template:
  
