--- a/examples/mesos_tosca.yaml
+++ b/examples/mesos_tosca.yaml
@@ -1,6 +1,8 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
  
-description: TOSCA CLUES test for the IM
+description: >
+  TOSCA examples for specifying Chronos and Marathon jobs to enable the 
+  specification of applications and services in INDIGO.
 
 topology_template:
  
