--- a/examples/web_mysql_tosca.yaml
+++ b/examples/web_mysql_tosca.yaml
@@ -1,7 +1,8 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
  
-description: TOSCA test for the IM
-
+description: >
+  TOSCA test for launching a typical example of a two tier application with an
+  Apache web server and a MySQL DB
 
 topology_template:
   inputs:
