--- a/artifacts/ec3/ec3_configure.yml
+++ b/artifacts/ec3/ec3_configure.yml
@@ -4,6 +4,7 @@
       service: name=cluesd state=restarted
 
   vars:
+      INDIGO_ORCHESTRATOR_URL: http://orchestrator01.indigo.recas.ba.infn.it:8080
       VNODE: vnode
       TORQUE_PATH: /var/spool/torque
       PBS_SERVER_CONF: |
@@ -74,7 +75,7 @@
 
     - ini_file: dest=/etc/clues2/clues2.cfg section={{ item.section }} option={{ item.option }} value="{{ item.value }}"
       with_items:
-        - { section: 'general', option: 'POWERMANAGER_CLASS', value: 'cluesplugins.im' }
+        - { section: 'general', option: 'POWERMANAGER_CLASS', value: 'cluesplugins.indigo_orchestrator' }
         - { section: 'scheduler_power_off_idle', option: 'IDLE_TIME', value: '300' }
         - { section: 'monitoring', option: 'MAX_WAIT_POWERON', value: '2000' }
         - { section: 'monitoring', option: 'MAX_WAIT_POWEROFF', value: '600' }
@@ -91,7 +92,9 @@
     - ini_file: dest=/etc/clues2/conf.d/plugin-ec3.cfg section="INDIGO ORCHESTRATOR" option=INDIGO_ORCHESTRATOR_DEPLOY_ID value={{ec3_deployment_id}}
       notify: restart cluesd
     - ini_file: dest=/etc/clues2/conf.d/plugin-ec3.cfg section="INDIGO ORCHESTRATOR" option=INDIGO_ORCHESTRATOR_MAX_INSTANCES value={{ec3_max_instances}}
-      notify: restart cluesd        
+      notify: restart cluesd
+    - ini_file: dest=/etc/clues2/conf.d/plugin-ec3.cfg section="INDIGO ORCHESTRATOR" option=INDIGO_ORCHESTRATOR_URL value={{INDIGO_ORCHESTRATOR_URL}}
+      notify: restart cluesd      
 
     - ini_file: dest=/etc/clues2/clues2.cfg section=general option=LRMS_CLASS value=cluesplugins.pbs
       notify: restart cluesd
