--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -98,6 +98,12 @@ tosca.capabilities.indigo.Scalable:
       description: the number of resources
       required: no
       defailt: 1
+    removal_list:
+      type: list
+      description: list of IDs of the resources to be removed
+      required: no
+      entry_schema:
+        type: string
 
 tosca.nodes.indigo.Compute:
   derived_from: tosca.nodes.Compute
