--- a/artifacts/ec3/ec3_install.yml
+++ b/artifacts/ec3/ec3_install.yml
@@ -62,3 +62,5 @@
     - name: Yum install Torque in REL system
       yum: name=torque-server,torque-scheduler,torque-client,openssh-clients,gcc-c++,torque-devel,make
       when: ansible_os_family == "RedHat" and clues_queue_system == 'torque'
+
+      # TODO: Add SGE, Mesos, HTCondor and SLURM
