--- a/artifacts/ec3/ec3_install.yml
+++ b/artifacts/ec3/ec3_install.yml
@@ -2,7 +2,7 @@
 - tasks:
     # General task
     - name: create epel.repo
-      template: src=utils/templates/epel-es.repo dest=/etc/yum.repos.d/epel.repo
+      template: src=utils/templates/epel.repo dest=/etc/yum.repos.d/epel.repo
       when: ansible_os_family == "RedHat"
       
     # CLUES2 requirements
@@ -42,25 +42,6 @@
       retries: 5
       delay: 1
 
-    - command: python setup.py install chdir=/tmp/clues-master creates=/usr/local/bin/cluesserver
+    # TODO: improve this using pip to install
     - command: python setup.py install chdir=/tmp/cpyutils-master
-    
-    # IM installation
-    - apt: name=python-soappy update_cache=yes cache_valid_time=3600
-      when: ansible_os_family == "Debian"
-    - yum: name=SOAPpy
-      when: ansible_os_family == "RedHat"
-    - pip: name=IM    
-    - file: path=/etc/init.d/im mode=0755
-
-    
-      # PBS installation
-    - name: Apt install Torque in Deb system
-      apt: name=torque-server,torque-client,g++,libtorque2-dev,make update_cache=yes cache_valid_time=3600
-      when: ansible_os_family == "Debian" and clues_queue_system == 'torque'
-      
-    - name: Yum install Torque in REL system
-      yum: name=torque-server,torque-scheduler,torque-client,openssh-clients,gcc-c++,torque-devel,make
-      when: ansible_os_family == "RedHat" and clues_queue_system == 'torque'
-
-      # TODO: Add SGE, Mesos, HTCondor and SLURM
+    - command: python setup.py install chdir=/tmp/clues-master creates=/usr/local/bin/cluesserver
