--- a/artifacts/lrms/torque/torque_wn_configure.yml
+++ b/artifacts/lrms/torque/torque_wn_configure.yml
@@ -4,6 +4,13 @@
       when: ansible_os_family == "Debian"
     - set_fact: TORQUE_PATH="/var/lib/torque"
       when: ansible_os_family == "RedHat"
+
+    # /etc/hosts configuration
+    - lineinfile: dest=/etc/hosts regexp='torqueserver' line='{{ hostvars[groups['torque_server'][0]]['IM_NODE_NET_1_IP'] }} torqueserver'
+      when: "'IM_NODE_NET_1_IP' in hostvars[groups['torque_server'][0]]"
+
+    - lineinfile: dest=/etc/hosts regexp='torqueserver' line='"{{ hostvars[groups['torque_server'][0]]['ansible_default_ipv4.address'] }}" torqueserver'
+      when: "'IM_NODE_NET_1_IP' not in hostvars[groups['torque_server'][0]]"
       
     - name: Set the Torque server name
       copy: content=torqueserver dest=/etc/torque/server_name
