--- a/examples/mesos_tosca.yaml
+++ b/examples/mesos_tosca.yaml
@@ -1,5 +1,15 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
- 
+
+repositories:
+  indigo_repository:
+    description: INDIGO Custom types repository
+    url: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/
+
+imports:
+  - indigo_custom_types:
+      file: custom_types.yaml
+      repository: indigo_repository
+
 description: >
   TOSCA examples for specifying Chronos and Marathon jobs to enable the 
   specification of applications and services in INDIGO.
