--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1,5 +1,62 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
+capability_types:
+
+  tosca.capabilities.indigo.Scalable:
+    derived_from: tosca.capabilities.Scalable
+    properties:
+      min_instances:
+        type: integer
+        default: 1
+        required: no
+      max_instances:
+        type: integer
+        default: 1
+        required: no
+      count:
+        type: integer
+        description: the number of resources
+        required: no
+        defailt: 1
+      removal_list:
+        type: list
+        description: list of IDs of the resources to be removed
+        required: no
+        entry_schema:
+          type: string
+
+  tosca.capabilities.indigo.LRMS:
+    derived_from: tosca.capabilities.Root
+    properties:
+      type:
+        type: string
+        required: true
+        constraints:
+        - valid_values: [ torque, slurm, sge, condor, mesos ]
+
+  tosca.capabilities.indigo.LRMS.Torque:
+    derived_from: tosca.capabilities.indigo.LRMS
+    properties:
+      type:
+        type: string
+        required: true
+        default: torque
+        constraints:
+          - equal: torque
+
+artifact_types:
+
+  tosca.artifacts.Implementation.YAML:
+    derived_from: tosca.artifacts.Implementation
+    description: YAML Ansible recipe artifact
+    mime_type: text/yaml
+    file_ext: [ yaml, yml ]
+
+relationship_types:
+
+  tosca.relationships.indigo.Manages:
+    derived_from: tosca.relationships.Root
+
 node_types:
 
   # Standard types defined in TOSCA with interfaces to install
@@ -21,7 +78,7 @@ node_types:
             db_user: { get_property: [ SELF, user ] }
             db_root_password: ""
             db_access_host: "%"
-           
+
   tosca.nodes.DBMS.MySQL:
     derived_from: tosca.nodes.DBMS
     properties:
@@ -46,7 +103,7 @@ node_types:
           inputs:
             root_password: { get_property: [ SELF, root_password ] }
             port: { get_property: [ SELF, port ] }
-           
+
   tosca.nodes.WebServer.Apache:
     derived_from: tosca.nodes.WebServer
     interfaces:
@@ -55,9 +112,9 @@ node_types:
           implementation: apache/apache_install.yml
         start:
           implementation: apache/apache_start.yml
-  
-  # INDIGO non normative types
-  
+
+# INDIGO non normative types
+
   tosca.nodes.indigo.Database.MySQL:
     derived_from: tosca.nodes.Database.MySQL
     properties:
@@ -83,30 +140,7 @@ node_types:
             db_user: { get_property: [ SELF, user ] }
             db_root_password: { get_property: [ SELF, root_password ] }
             db_access_host: { get_property: [ SELF, access_host ] }
-  
-  tosca.capabilities.indigo.Scalable:
-    derived_from: tosca.capabilities.Scalable
-    properties:
-      min_instances:
-        type: integer
-        default: 1
-        required: no
-      max_instances:
-        type: integer
-        default: 1
-        required: no
-      count:
-        type: integer
-        description: the number of resources
-        required: no
-        defailt: 1
-      removal_list:
-        type: list
-        description: list of IDs of the resources to be removed
-        required: no
-        entry_schema:
-          type: string
-  
+
   tosca.nodes.indigo.Compute:
     derived_from: tosca.nodes.Compute
     properties:
@@ -117,7 +151,7 @@ node_types:
     capabilities:
       scalable:
         type: tosca.capabilities.indigo.Scalable
-  
+
   tosca.nodes.indigo.GalaxyPortal:
     derived_from: tosca.nodes.WebServer
     properties:
@@ -148,7 +182,7 @@ node_types:
           relationship: tosca.relationships.HostedOn
     interfaces:
       Standard:
-        create: 
+        create:
           implementation: galaxy/galaxy_install.yml
           inputs:
             galaxy_install_path: { get_property: [ SELF, install_path ] }
@@ -164,20 +198,19 @@ node_types:
           inputs:
             galaxy_user: { get_property: [ SELF, user ] }
             galaxy_install_path: { get_property: [ SELF, install_path ] }
-  
-            
+
   tosca.nodes.indigo.GalaxyShedTool:
     derived_from: tosca.nodes.WebApplication
     properties:
-      name:    
+      name:
         type: string
         description: name of the tool
         required: true
-      owner:    
+      owner:
         type: string
         description: developer of the tool
         required: true
-      tool_panel_section_id:    
+      tool_panel_section_id:
         type: string
         description: panel section to install the tool
         required: true
@@ -196,27 +229,7 @@ node_types:
             galaxy_tool_name: { get_property: [ SELF, name ] }
             galaxy_tool_owner: { get_property: [ SELF, owner ] }
             galaxy_tool_panel_section_id: { get_property: [ SELF, tool_panel_section_id ] }
-  
-  
-  tosca.capabilities.indigo.LRMS:
-    derived_from: tosca.capabilities.Root
-    properties:
-      type:
-        type: string
-        required: true
-        constraints:
-        - valid_values: [ torque, slurm, sge, condor, mesos ]
-        
-  tosca.capabilities.indigo.LRMS.Torque:
-    derived_from: tosca.capabilities.indigo.LRMS
-    properties:
-      type: 
-        type: string
-        required: true
-        default: torque
-        constraints:
-          - equal: torque
-   
+
   tosca.nodes.indigo.ElasticCluster:
     derived_from: tosca.nodes.Root
     properties:
@@ -227,7 +240,7 @@ node_types:
         required: false
       deployment_id:
         type: string
-        description: ID of the deployment of this elastic cluster in the orchestrator 
+        description: ID of the deployment of this elastic cluster in the orchestrator
         required: false
     interfaces:
       Standard:
@@ -249,8 +262,7 @@ node_types:
           capability: tosca.capabilities.indigo.LRMS
           node: tosca.nodes.indigo.LRMS.FrontEnd
           relationship: tosca.relationships.HostedOn
-  
-  
+
   tosca.nodes.indigo.LRMS.WorkerNode:
     derived_from: tosca.nodes.SoftwareComponent
     capabilities:
@@ -262,7 +274,7 @@ node_types:
           capability: tosca.capabilities.Container
           node: tosca.nodes.Compute
           relationship: tosca.relationships.HostedOn
-          
+
   tosca.nodes.indigo.LRMS.WorkerNode.Torque:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode
     interfaces:
@@ -270,7 +282,7 @@ node_types:
         create: lrms/torque/torque_wn_install.yml
         configure: lrms/torque/torque_wn_configure.yml
         start: lrms/torque/torque_wn_start.yml
-  
+
   tosca.nodes.indigo.LRMS.FrontEnd:
     derived_from: tosca.nodes.SoftwareComponent
     capabilities:
@@ -281,7 +293,7 @@ node_types:
           capability: tosca.capabilities.Container
           node: tosca.nodes.Compute
           relationship: tosca.relationships.HostedOn
-  
+
   tosca.nodes.indigo.LRMS.FrontEnd.Torque:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
     capabilities:
@@ -292,72 +304,7 @@ node_types:
         create: lrms/torque/torque_fe_install.yml
         configure: lrms/torque/torque_fe_configure.yml
         start: lrms/torque/torque_fe_start.yml
-   
-  tosca.relationships.indigo.Manages:
-    derived_from: tosca.relationships.Root
-  
-  
-  tosca.artifacts.Implementation.YAML:
-    derived_from: tosca.artifacts.Implementation
-    description: YAML Ansible recipe artifact
-    mime_type: text/yaml
-    file_ext: [ yaml, yml ]  
-  
-  # Docker types from TOSCA standard not in tosca-parser
-  
-  tosca.capabilities.Container.Docker:
-    derived_from: tosca.capabilities.Container
-    properties:
-      version:
-        type: list
-        required: false
-        entry_schema:
-          type: version
-      publish_all:
-        type: boolean
-        default: false
-        required: false
-      publish_ports:
-        type: list
-        entry_schema:
-          type: PortSpec
-        required: false
-      expose_ports:
-        type: list
-        entry_schema:
-          type: PortSpec
-        required: false
-      volumes:
-        type: list
-        entry_schema: 
-          type: string
-        required: false
-        
-  tosca.nodes.Container.Application.Docker:
-    derived_from: tosca.nodes.Container.Application
-    requirements:
-      - host:
-          capability: tosca.capabilities.Container.Docker
-          
-  tosca.nodes.Container.Application:
-    derived_from: tosca.nodes.Root
-    requirements:
-      - host:
-          capability: tosca.capabilities.Container
-          node: tosca.nodes.Container
-          relationship: tosca.relationships.HostedOn
-          
-  
-  tosca.nodes.Container.Runtime:
-    derived_from: tosca.nodes.SoftwareComponent
-    capabilities:
-      host:
-        type: tosca.capabilities.Container
-      scalable:
-        type: tosca.capabilities.Scalable
-        
-  ######################################################################################
-  
+
   tosca.nodes.indigo.Container.Runtime.Docker:
     derived_from: tosca.nodes.SoftwareComponent
     capabilities:
@@ -365,7 +312,7 @@ node_types:
         type: tosca.capabilities.Container.Docker
       scalable:
         type: tosca.capabilities.Scalable
-        
+
   tosca.nodes.indigo.Container.Application.Docker:
     derived_from: tosca.nodes.Container.Application.Docker
     properties:
@@ -377,13 +324,13 @@ node_types:
         type: list
         entry_schema:
           type: string
-        
+
   tosca.nodes.indigo.Container.Application.Docker.Chronos:
     derived_from: tosca.nodes.indigo.Container.Application.Docker
     properties:
       schedule:
         required: no
         type: string
-          
+
   tosca.nodes.indigo.Container.Application.Docker.Marathon:
     derived_from: tosca.nodes.indigo.Container.Application.Docker
