--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -164,10 +164,16 @@ node_types:
   tosca.nodes.indigo.MonitoredCompute:
     derived_from: tosca.nodes.Compute
     properties:
+      # Set the current data of the zabbix server
+      # but it can also specified in the TOSCA document
       zabbix_server:
         type: string
         required: no
-        default: 127.0.0.1
+        default: 90.147.170.165
+      zabbix_server_port:
+        type: PortDef
+        required: no
+        default: 32314
     interfaces:
       Standard:
         create: 
@@ -176,6 +182,7 @@ node_types:
           implementation: zabbix/zabbix_agent_configure.yml
           inputs:
             zabbix_server: { get_property: [ SELF, zabbix_server ] }
+            zabbix_server_port: { get_property: [ SELF, zabbix_server_port ] }
         start:
           implementation: zabbix/zabbix_agent_start.yml
 
