--- a/artifacts/zabbix/zabbix_agent_configure.yml
+++ b/artifacts/zabbix/zabbix_agent_configure.yml
@@ -2,11 +2,12 @@
     - lineinfile: dest=/etc/zabbix/zabbix_agentd.conf regexp="{{ item.var }}=" line="{{ item.var }}={{ item.value }}"
       with_items:
         - { var: "Server", value: "{{zabbix_server}}"}
-        - { var: "ServerActive", value: "{{zabbix_server}}"}
-        - { var: "Hostname", value: "{{ansible_hostname}}"}
+        - { var: "ServerActive", value: "{{zabbix_server}}:{{zabbix_server_port}}"}
+        - { var: "Hostname", value: "Zabbix server"}
         - { var: "HostMetadataItem", value: "system.uname"}
+        - { var: "StartAgents", value: "0"}
       notify: restart zabbix-agent
 
   handlers:
     - name: restart zabbix-agent
-      service: name=zabbix-agent state=started
+      service: name=zabbix-agent state=restarted
