--- a/artifacts/zabbix/zabbix_agent_install.yml
+++ b/artifacts/zabbix/zabbix_agent_install.yml
@@ -1,16 +1,28 @@
 - tasks:
   - name: Download Zabbix release deb file
     get_url: 
-      url="http://repo.zabbix.com/zabbix/2.4/debian/pool/main/z/zabbix-release/zabbix-release_2.4-1+jessie_all.deb"
-      dest="/tmp/zabbix-release_2.4-1+jessie_all.deb"
-    when: ansible_os_family == "Debian"
+      url="http://repo.zabbix.com/zabbix/3.0/debian/pool/main/z/zabbix-release/zabbix-release_3.0-1+jessie_all.deb"
+      dest="/tmp/zabbix-release_3.0-1.deb"
+    when: ansible_os_family == "Debian" and ansible_distribution == "Debian" and ansible_distribution_major_version == 8
+    
+  - name: Download Zabbix release deb file
+    get_url: 
+      url="http://repo.zabbix.com/zabbix/3.0/debian/pool/main/z/zabbix-release/zabbix-release_3.0-1+wheezy_all.deb"
+      dest="/tmp/zabbix-release_3.0-1.deb"
+    when: ansible_os_family == "Debian" and ansible_distribution == "Debian" and ansible_distribution_major_version == 7
+    
+  - name: Download Zabbix release deb file
+    get_url: 
+      url="http://repo.zabbix.com/zabbix/3.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_3.0-1+trusty_all.deb"
+      dest="/tmp/zabbix-release_3.0-1.deb"
+    when: ansible_os_family == "Debian" and ansible_distribution == "Ubuntu" and ansible_distribution_major_version == 14
 
-  - name: Apt install Zabbix release  in Ubuntu
-    apt: deb="/tmp/zabbix-release_2.4-1+jessie_all.deb"
+  - name: Apt install Zabbix release in Ubuntu/Debian
+    apt: deb="/tmp/zabbix-release_3.0-1.deb"
     when: ansible_os_family == "Debian"
 
   - name: Yum install Zabbix release in RHEL or CentOS
-    yum: name=http://repo.zabbix.com/zabbix/2.4/rhel/{{ ansible_distribution_version.split('.')[0] }}/x86_64/zabbix-release-2.4-1.el{{ ansible_distribution_version.split('.')[0] }}.noarch.rpm
+    yum: name=http://repo.zabbix.com/zabbix/3.0/rhel/{{ ansible_distribution_version.split('.')[0] }}/x86_64/zabbix-release-3.0-1.el{{ ansible_distribution_version.split('.')[0] }}.noarch.rpm
     when: ansible_os_family == "RedHat"
 
   - name: Apt install Zabbix agent
@@ -18,5 +30,5 @@
     when: ansible_os_family == "Debian"
 
   - name: Yum install Zabbix agent
-    yum: name=zabbix-agent
+    yum: name=zabbix-agent update_cache=yes
     when: ansible_os_family == "RedHat"
